--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,8 @@ dependencies:
   permission_handler: ^11.1.0
   cached_network_image: ^3.3.0
   infinite_scroll_pagination: ^4.0.0
+  intl: ^0.19.0
+  recase: ^4.1.0
 
 dev_dependencies:
   flutter_test:
