--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   infinite_scroll_pagination: ^4.0.0
   intl: ^0.19.0
   recase: ^4.1.0
+  shared_preferences: ^2.2.2
 
 dev_dependencies:
   flutter_test:
