--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,8 @@ dependencies:
   recase: ^4.1.0
   shared_preferences: ^2.2.2
   apple_maps_flutter: ^1.3.0
+  flutter_secure_storage: ^9.0.0
+  fresh_dio: ^0.4.1
 
 dev_dependencies:
   flutter_test:
