--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   intl: ^0.19.0
   recase: ^4.1.0
   shared_preferences: ^2.2.2
+  flutter_svg: ^2.0.10+1
   apple_maps_flutter: ^1.3.0
   flutter_secure_storage: ^9.0.0
   fresh_dio: ^0.4.1
