--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   firebase_messaging: ^14.7.5
   logger: ^2.0.2+1
   firebase_analytics: ^10.7.1
+  firebase_auth: ^6.6.2
 
 dev_dependencies:
   flutter_test:
